complete the banner section and rsponsive it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="inter-font">
+<body class="inter-font width-body">
     <header class="bg-light">
 
     <nav>
@@ -27,7 +27,37 @@
         </div>
         
         </nav>
+<div class="banner-container display-flex">
+<div class="banner-text">
+<h1 class="banner-title">
+    Get body in <br> <span id="shape-style">shape</span> & stay healthy
+</h1>
+<p class="banner-description">
+    A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
+</p>
+<div class="btn-responsive" style="margin-top:28px;">
+    <button class="btn-primary primary-color ">Join Club Now!</button>
+    <button class="btn-primary btn-black">Download App</button>
+</div>
+</div>
+<div class="banner-img">
+    <img src="images/Images 2.png" alt="">
+    <div class="video-tutorial">
+        <button class="circle"></button>
+        <div>
+            
+            <h4 class="three-fifty">350+</h4>
+        <p class="vt">Video tutorial</p>
+        </div>
+    </div>
+    <div class="workout-videos">
+        <h3 class="five-hundred">500+</h3>
+        <p class="workout-video">Free Workout Videos</p>
+    </div>
+</div>
 
+
+</div>
 
     </header>
 
