--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body class="inter-font width-body">
     <header class="bg-light">
 
+<!-- nav section start here -->
     <nav>
         <div class="navbar-container  display-flex">
             <h1 class="fitness-color "> <i>Fitness</i></h1>
@@ -27,6 +28,9 @@
         </div>
         
         </nav>
+
+        <!-- banner section starts here -->
+
 <div class="banner-container display-flex">
 <div class="banner-text">
 <h1 class="banner-title">
@@ -60,6 +64,84 @@
 </div>
 
     </header>
+    <main>
+        <!-- habits section start here -->
+<section style="background-color: black;">
+    <div class="habits ">
+    <div class="habits-text-container">
+   <h2 class="habits-section-title"> Change Your Habits</h2>
+ <p class="habits-section-description">
+ We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>access to a gym.
+            </p>
+        </div>
+        <div class=" habits-img-container">
+            <div class="card">
+                <div>
+                    <img src="images/image 3.png" alt="">
+                </div>
+                <div class="child-container">
+                    <h5 class="child-1">
+                        Movement
+                    </h5>
+                    <p class="child-2">
+                        We believe fitness should be <br> accessible to everyone
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="images/image 3.png" alt="">
+                </div>
+                <div class="child-container">
+                    <h5 class="child-1">
+                        Time
+                    </h5>
+                    <p class="child-2">
+                        We believe fitness should be <br> accessible to everyone
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="images/image 3.png" alt="">
+                </div>
+                <div class="child-container">
+                    <h5 class="child-1">
+                        Practice
+                    </h5>
+                    <p class="child-2">
+                        We believe fitness should be <br> accessible to everyone
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="images/image 3.png" alt="">
+                </div>
+                <div class="child-container">
+                    <h5 class="child-1">
+                        Weight Loss
+                    </h5>
+                    <p class="child-2">
+                        We believe fitness should be <br> accessible to everyone
+                    </p>
+                </div>
+
+            </div>
+
+    </div>
+
+    </div>
+</section>
+
+
+    </main>
 
     
 </body>
