added the run section and complete responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="card">
                 <div>
-                    <img src="images/image 3.png" alt="">
+                    <img src="images/image 2.png" alt="">
                 </div>
                 <div class="child-container">
                     <h5 class="child-1">
@@ -107,7 +107,7 @@
 
             <div class="card">
                 <div>
-                    <img src="images/image 3.png" alt="">
+                    <img src="images/image 4.png" alt="">
                 </div>
                 <div class="child-container">
                     <h5 class="child-1">
@@ -122,7 +122,7 @@
 
             <div class="card">
                 <div>
-                    <img src="images/image 3.png" alt="">
+                    <img src="images/image 5.png" alt="">
                 </div>
                 <div class="child-container">
                     <h5 class="child-1">
@@ -139,7 +139,27 @@
 
     </div>
 </section>
-
+<!--  RUN SECTION STARTS HERE -->
+<section style="padding: 80px;">
+<div class="run-section-container">
+    <div class="run-section-text">
+        <h1>  Run an Extra 
+            Mile Easily</h1>
+        <p>
+            We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+        </p>
+        <div>
+            <button class="primary-color btn-primary">
+                Join Now
+            </button>
+           </div>
+        </div >
+        <div class="run-section-img">
+        <img src="images/run.jpg" alt="">
+        </div>
+        
+</div>
+</section>
 
     </main>
 
