correction team section img

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
    
 
 </form>
-<button class=" btn-primary primary-color">Calculate</button>
+<button style="margin-bottom: 20px;" class=" btn-primary primary-color ">Calculate</button>
 </div>
 
     </div>
@@ -255,7 +255,7 @@
 <div class="team-section-img">
    
     <div class="team-img">
-        <img src="images/trainer1.png" alt="">
+        <img src="images/New folder/rsz_2trainer1.png" alt="">
         <div class="img-text">
             <h5>
                 jeramu
@@ -268,7 +268,7 @@
         </div>
     </div>
     <div class="team-img">
-        <img src="images/trainer2.png" alt="">
+        <img src="images/New folder/rsz_1trainer2.png" alt="">
         <div class="img-text">
             <h5>
                 Cameron williamson
@@ -281,7 +281,7 @@
         </div>
     </div>
     <div class="team-img">
-        <img src="images/trainer3.png" alt="">
+        <img src="images/New folder/trainer3.png" alt="">
         <div class="img-text">
             <h5>
                 Darrell Steward
@@ -294,7 +294,7 @@
         </div>
     </div>
     <div class="team-img">
-        <img src="images/trainer4.png" alt="">
+        <img src="images/New folder/rsz_trainer4.png" alt="">
         <div class="img-text">
             <h5>
                 Dianne
@@ -307,7 +307,7 @@
         </div>
     </div>
     <div class="team-img">
-        <img src="images/trainer5.png" alt="">
+        <img src="images/New folder/trainer5.png" alt="">
         <div class="img-text">
             <h5>
                 Cody Fisher
@@ -320,7 +320,7 @@
         </div>
     </div>
     <div class="team-img">
-        <img src="images/trainer6.png" alt="">
+        <img src="images/New folder/rsz_trainer6.png" alt="">
         <div class="img-text">
             <h5>
             Theresa Wabb
@@ -393,4 +393,5 @@
 
     
 </body>
+
 </html>
